fix(users): fix users table to shift actino btn

--- a/static/style.css
+++ b/static/style.css
@@ -8,3 +8,7 @@
     max-height: 90%;
     height: 90%;
 }
+
+.overflow-hidden {
+    overflow: hidden;
+}
